jilles      2006/01/05 00:06:26 UTC	(20060105-4491)
  Log:
  Make it such that "Insufficient parameters for \2<command>\2."
  and (former) variants only have to appear in language files
  once.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/cs_count.c (File Modified) 
  +2 -2		trunk/contrib/ns_enforce.c (File Modified) 
  +2 -2		trunk/contrib/ns_generatepass.c (File Modified) 
  +2 -2		trunk/contrib/us_generatepass.c (File Modified) 
  +4 -4		trunk/modules/chanserv/akick.c (File Modified) 
  +4 -4		trunk/modules/chanserv/ban.c (File Modified) 
  +1 -1		trunk/modules/chanserv/clear.c (File Modified) 
  +3 -3		trunk/modules/chanserv/close.c (File Modified) 
  +1 -1		trunk/modules/chanserv/drop.c (File Modified) 
  +2 -2		trunk/modules/chanserv/flags.c (File Modified) 
  +1 -1		trunk/modules/chanserv/ftransfer.c (File Modified) 
  +2 -2		trunk/modules/chanserv/halfop.c (File Modified) 
  +1 -1		trunk/modules/chanserv/hold.c (File Modified) 
  +1 -1		trunk/modules/chanserv/info.c (File Modified) 
  +1 -1		trunk/modules/chanserv/invite.c (File Modified) 
  +4 -4		trunk/modules/chanserv/kick.c (File Modified) 
  +1 -1		trunk/modules/chanserv/list.c (File Modified) 
  +2 -2		trunk/modules/chanserv/mark.c (File Modified) 
  +2 -2		trunk/modules/chanserv/op.c (File Modified) 
  +1 -1		trunk/modules/chanserv/recover.c (File Modified) 
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 
  +2 -2		trunk/modules/chanserv/set.c (File Modified) 
  +1 -1		trunk/modules/chanserv/taxonomy.c (File Modified) 
  +4 -4		trunk/modules/chanserv/topic.c (File Modified) 
  +2 -2		trunk/modules/chanserv/voice.c (File Modified) 
  +1 -1		trunk/modules/chanserv/why.c (File Modified) 
  +3 -3		trunk/modules/chanserv/xop.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +2 -2		trunk/modules/helpserv/helper.c (File Modified) 
  +1 -1		trunk/modules/helpserv/override.c (File Modified) 
  +1 -1		trunk/modules/memoserv/delete.c (File Modified) 